minor changes in build process